Add Prettier configuration and update components to use FontAwesome icons
- Created a .prettierrc file for consistent code formatting.
- Updated NotificationsButtonComponent to use a button component with FontAwesome bell icon.
- Refactored PingPongRawComponent to replace text with FontAwesome arrow icons.
- Enhanced SignMessageComponent to include FontAwesome icons for buttons.
- Improved account data handling in AccountComponent for better state management.

--- a/src/app/widgets/ping-pong-raw/ping-pong-raw.component.html
+++ b/src/app/widgets/ping-pong-raw/ping-pong-raw.component.html
@@ -7,7 +7,7 @@
         dataTestId="btnPingRaw"
         dataCy="transactionBtn"
       >
-        ⬆️ Ping
+        <fa-icon [icon]="faArrowUp"></fa-icon> Ping
       </app-button>
 
       <app-button
@@ -16,7 +16,7 @@
         dataCy="transactionBtn"
         (onClick)="onSendPongTransaction()"
       >
-        ⬇️ Pong
+        <fa-icon [icon]="faArrowDown"></fa-icon> Pong
       </app-button>
     </div>
   </div>
