Add MultiversX logo SVG and update header component to use the logo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,8 +3,7 @@
     [className]="'flex items-center justify-between'"
     [to]="isLoggedIn ? routeNames.dashboard : routeNames.home"
   >
-    <!-- MultiversXLogo equivalent - you can replace with actual SVG -->
-    <div class="w-full h-6">MultiversX</div>
+    <img src="/multiversx-logo.svg" alt="MultiversX" class="w-full h-6" />
   </app-mx-link>
 
   <nav class="h-full w-full text-sm sm:relative sm:left-auto sm:top-auto sm:flex sm:w-auto sm:flex-row sm:justify-end sm:bg-transparent">
