Updated styles and components

--- a/src/app/widgets/account/account.component.html
+++ b/src/app/widgets/account/account.component.html
@@ -11,7 +11,12 @@
 
     <p>
       <app-label>Balance: </app-label>
-      <span data-testid="balance">{{ balance }}</span>
+      <app-format-amount
+        [value]="balance"
+        [showLabel]="balance !== '0'"
+        [egldLabel]="label"
+        data-testid="balance"
+      />
     </p>
 
     <p>
