--- a/src/app/components/transaction-output/transaction-output.component.html
+++ b/src/app/components/transaction-output/transaction-output.component.html
@@ -1,22 +1,26 @@
 <div class="flex flex-col" *ngIf="transaction">
   <p>
     <app-label>Hash: </app-label>
-    <app-mx-link
-      [to]="'/transactions/' + transaction.hash"
+    <a
+      [href]="hashExplorerLink"
+      target="_blank"
+      rel="noopener noreferrer"
       className="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
     >
       {{ transaction.hash }}
-    </app-mx-link>
+  </a>
   </p>
 
   <p>
     <app-label>Receiver: </app-label>
-    <app-mx-link
-      [to]="'/accounts/' + transaction.receiver"
+    <a
+      [href]="receiverExplorerLink"
+      target="_blank"
+      rel="noopener noreferrer"
       className="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
     >
       {{ transaction.receiver }}
-    </app-mx-link>
+    </a>
   </p>
 
   <p>
@@ -24,7 +28,7 @@
     <app-format-amount
       [value]="transaction.value"
       [showLabel]="transaction.value !== '0'"
-      egldLabel="EGLD"
+      [egldLabel]="label"
       data-testid="balance"
     >
     </app-format-amount>
