--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,7 @@
       </div>
 
       <ng-container *ngIf="isLoggedIn">
+        <app-github-button></app-github-button>
         <app-notifications-button></app-notifications-button>
         <app-button
           (onClick)="handleLogout()"
