--- a/src/app/widgets/sign-message/sign-message.component.html
+++ b/src/app/widgets/sign-message/sign-message.component.html
@@ -1,34 +1,35 @@
 <div class="flex flex-col gap-6">
   <div class="flex gap-2 items-start">
+    @if (state === 'success' || state === 'error') {
     <app-button
-      *ngIf="state === 'success' || state === 'error'"
       dataTestId="closeTransactionSuccessBtn"
       id="closeButton"
       (onClick)="handleClear($event)"
     >
       <fa-icon [icon]="state === 'error' ? faRotateRight : faBroom"></fa-icon>
     </app-button>
-
+    } @if (state === 'pending') {
     <app-button
-      *ngIf="state === 'pending'"
       dataTestId="signMsgBtn"
       (onClick)="handleSubmit()"
       [disabled]="!message.trim()"
     >
       <fa-icon [icon]="faPen"></fa-icon> Sign
     </app-button>
+    }
   </div>
 
-  <app-output-container [className]="'p-0 border-0'">
-    <div *ngIf="state === 'pending'">
+  <app-output-container [cssClass]="'p-0 border-0'">
+    @if (state === 'pending') {
+    <div>
       <textarea
         [(ngModel)]="message"
         placeholder="Write message here"
         class="resize-none w-full h-32 rounded-lg focus:outline-none focus:border-blue-500 p-2 border border-gray-300"
       ></textarea>
     </div>
-
-    <div *ngIf="state === 'success' && signedMessage">
+    } @if (state === 'success' && signedMessage) {
+    <div>
       <div class="flex flex-col gap-6">
         <div class="flex flex-col w-full">
           <div class="flex flex-row w-full gap-2 mb-2">
@@ -59,10 +60,11 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="state === 'error'" class="text-red-600">
+    } @if (state === 'error') {
+    <div class="text-red-600">
       <p>Message could not be signed</p>
       <p>Reason: An error occurred during signing</p>
     </div>
+    }
   </app-output-container>
 </div>
