--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -2,7 +2,7 @@
   [id]="id"
   [disabled]="disabled"
   (click)="onClick.emit($event)"
-  [class]="className"
+  [class]="cssClass"
   [type]="type"
   [attr.data-testid]="dataTestId"
   [attr.data-cy]="dataCy"
