--- a/src/app/components/github-button/github-button.component.html
+++ b/src/app/components/github-button/github-button.component.html
@@ -2,7 +2,7 @@
   [href]="GITHUB_REPO_URL"
   rel='noopener noreferrer'
   target='_blank'
-  [className]="'inline-block rounded-lg px-3 py-2 text-center hover:no-underline my-0 text-gray-600 hover:bg-slate-100 mx-0'"
+  class="inline-block rounded-lg px-3 py-2 text-center hover:no-underline my-0 text-gray-600 hover:bg-slate-100 mx-0"
 >
   <fa-icon [icon]="faGithub"></fa-icon>
 </a> 
