--- a/src/app/components/notifications-button/notifications-button.component.html
+++ b/src/app/components/notifications-button/notifications-button.component.html
@@ -1,6 +1,6 @@
 <app-button
   (onClick)="handleOpenNotificationsFeed()"
-  [className]="'inline-block rounded-lg px-3 py-2 text-center hover:no-underline my-0 text-gray-600 hover:bg-slate-100 mx-0'"
+  [cssClass]="'inline-block rounded-lg px-3 py-2 text-center hover:no-underline my-0 text-gray-600 hover:bg-slate-100 mx-0'"
 >
   <fa-icon [icon]="faBell"></fa-icon>
 </app-button> 
