--- a/src/app/components/output-container/output-container.component.html
+++ b/src/app/components/output-container/output-container.component.html
@@ -1,6 +1,6 @@
 <div
   [attr.data-testid]="dataTestId"
-  [class]="'text-sm border border-gray-200 rounded overflow-auto ' + className"
+  [class]="'text-sm border border-gray-200 rounded overflow-auto ' + cssClass"
 >
   <div *ngIf="isLoading" class="flex justify-center items-center p-4">
     <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600"></div>
