--- a/src/app/components/transaction-output/transaction-output.component.html
+++ b/src/app/components/transaction-output/transaction-output.component.html
@@ -5,7 +5,7 @@
       [href]="hashExplorerLink"
       target="_blank"
       rel="noopener noreferrer"
-      className="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
+      class="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
     >
       {{ transaction.hash }}
   </a>
@@ -17,7 +17,7 @@
       [href]="receiverExplorerLink"
       target="_blank"
       rel="noopener noreferrer"
-      className="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
+      class="border-b border-dotted border-gray-500 hover:border-solid hover:border-gray-800"
     >
       {{ transaction.receiver }}
     </a>
